--- a/layouts/boilerplate.ejs
+++ b/layouts/boilerplate.ejs
@@ -29,7 +29,13 @@
         </div>
         <div class="offcanvas-body">
             <div class="nav-element">
-                <a href="/">Home</a>
+                <a href="/admin/login">Admin</a>
+            </div>
+            <div class="nav-element">
+                <a href="/faculty/login">Faculty</a>
+            </div>
+            <div class="nav-element">
+                <a href="/faculty/login">Student</a>
             </div>
         </div>
     </div>
