--- a/public/css/style.css
+++ b/public/css/style.css
@@ -280,9 +280,12 @@ select {
 
 /* Home body styles */
 .home-body {
-  color: white;
-  background-image: url(https://res.cloudinary.com/drqpxfysj/image/upload/v1716468033/wanderlust_DEV/h8jbqatguqz948drpqmv.jpg);
-  
+  background-image: url('https://res.cloudinary.com/drqpxfysj/image/upload/v1725807142/1_mxvxbz.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
 }
 
 .home-body h2 {
