--- a/views/admin/section/section.ejs
+++ b/views/admin/section/section.ejs
@@ -17,6 +17,7 @@
                         <p class="card-text"><%= section.branch.academicYear.name %></p>
                         <div class="button-container mt-3">
                             <a href="/admin/section/<%= section._id %>" class="btn btn-dark m-2">View</a>
+                            <a href="/admin/section/<%= section._id %>/edit" class="btn btn-primary btn m-2">Edit</a>
                             <form method="post" action="/admin/section/<%= section._id %>?_method=DELETE" class="d-inline" onsubmit="return confirm('Are you sure you want to delete this section? This action cannot be undone.')">
                                 <button type="submit" class="btn btn-danger">Delete</button>
                             </form>
