--- a/views/admin/subjects/index.ejs
+++ b/views/admin/subjects/index.ejs
@@ -19,7 +19,12 @@
                     <div>
                         <h5><%= subject.name %> (<%= subject.full_name %>)</h5>
                         <p>Code: <%= subject.code %></p>
-                        <p>Academic Year: <%= subject.academicYear.name %>, Semester: <%= subject.semester.name %></p>
+                        <% if (subject.academicYear) { %>
+                            <p>Academic Year: <%= subject.academicYear.name %></p>
+                        <% } %>
+                        <% if (subject.semester) { %>
+                            <p>Semester: <%= subject.semester.name %></p>
+                        <% } %>
                     </div>
                     <div>
                         <a href="/admin/subjects/<%= subject._id %>/edit" class="btn btn-info mr-2">Edit</a>
@@ -30,5 +35,21 @@
                 </li>
             <% }) %>
         </ul>
+
+        <!-- Pagination Controls -->
+        <nav aria-label="Page navigation">
+            <ul class="pagination justify-content-center mt-4">
+                <% if (hasPreviousPage) { %>
+                    <li class="page-item">
+                        <a class="page-link" href="?page=<%= previousPage %>&search=<%= searchTerm %>">Previous</a>
+                    </li>
+                <% } %>
+                <% if (hasNextPage) { %>
+                    <li class="page-item">
+                        <a class="page-link" href="?page=<%= nextPage %>&search=<%= searchTerm %>">Next</a>
+                    </li>
+                <% } %>
+            </ul>
+        </nav>
     </div>
 </body>
