--- a/views/faculty/download.ejs
+++ b/views/faculty/download.ejs
@@ -21,12 +21,12 @@
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="fromDate">From</label>
-                            <input type="date" id="fromDate" name="fromDate" class="form-control" required>
+                            <input type="date" id="fromDate" name="fromDate" class="form-control" max="<%= new Date().toISOString().split('T')[0] %>" required>
                             <div class="invalid-feedback">Please choose a date.</div>
                         </div>
                         <div class="form-group col-md-6">
                             <label for="toDate">To</label>
-                            <input type="date" id="toDate" name="toDate" class="form-control" required>
+                            <input type="date" id="toDate" name="toDate" class="form-control" max="<%= new Date().toISOString().split('T')[0] %>" required>
                             <div class="invalid-feedback">Please choose a date.</div>
                         </div>
                     </div>
